# tp_redes_grupo05

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  check_hash.sh  main.py  mn.sh  plugin.lua  pyproject.toml  run_mininet.sh  run_scripts.sh  run_tests.sh  test.txt
.github/workflows/: pre-commit.yaml  tests.yaml
docs/: fragmentation.md
mininet/: Dockerfile.mininet  ENTRYPOINT.sh  example.py  packet_loss_example.py  run_mininet.sh
mininet/atp_multiple_clients/: config.json  topo.py  topo_multiple.py
mininet/atp_single_client/: topo_single.py
mininet/demo/: 1c-l10-gbn.json  1c-l10-sw.json  3c-l0-gbn.json  3c-l0-sw.json  3c-l10-sw.json  5c-l0-gbn.json  5c-l0-sw.json  5c-l10-gbn.json  5c-l10-sw.json  manual_topo.py  topo.py
mininet/fragmentation/: frag_topo.py  tcp_frag_capture_if1.pcapng  tcp_frag_capture_if2.pcapng  topo_low_mtu.py  udp_frag_capture_if1.pcapng  udp_frag_capture_if2.pcapng
src/: download.py  start_server.py  upload.py
src/client/: download.py  main.py  upload.py
src/client/utils/: client.py  client_protocol.py  header.py  x.py
src/common/: args_parser.py  config.py  datagram.py  flow_manager.py  packet.py  udp_socket.py
src/common/file_ops/: file_manager.py
src/common/protocol/: go_back_n.py  protocol.py  stop_and_wait.py
src/server/: config.py  main.py  start_server.py
test/: test_x.py
test/client/: test_client.py  test_download.py  test_upload.py  test_y.py
test/common/: test_packet.py
test/protocol/: test_z.py
test/server/: test_server.py  test_start_server.py  test_x.py
(+39 files in other folders)
