[project]
name = "redes"
version = "0.1.0"
description = "TP1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "mininet>=2.3.0.dev6",
    "mypy>=1.15.0",
    "pytest",
    "pytest-cov>=6.1.1",
    "tool>=0.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[[tool.mypy.overrides]]
module = ["mininet.*"]
ignore_missing_imports  = true
