[project]
name = "redes"
version = "0.1.0"
description = "TP1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mininet>=2.3.0.dev6",
    "pytest",
    "pytest-cov>=6.1.1",
    "asyncio",
    "pudb>=2024.1.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["mininet.*"]
ignore_missing_imports  = true
